# clair

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py  utils.py  worker.py
backend/app/agents/: organizer.py  researcher.py  search_agent.py
backend/app/models/: schemas.py
backend/app/routers/: categories.py  notes.py  search.py
backend/app/services/: ai_client.py  embeddings.py  scraper.py  storage.py  transcription.py
backend/tests/: test_e2e.py  test_smoke.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CategorySidebar.tsx  NoteCard.tsx  NoteInput.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Auth.tsx  Home.tsx  Landing.tsx  NotePage.tsx  SearchableHome.tsx
frontend/src/styles/: global.css
frontend/src/types/: api.ts
shared/: supabase_migration.sql
