[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clair-backend"
version = "0.1.0"
description = "Clair — AI-powered note organizer backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "supabase>=2.10",
    "celery[redis]>=5.4",
    "anthropic>=0.40",
    "openai>=1.57",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "duckduckgo-search>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
